# ado-pipeline-trainning

./: CMakeLists.txt  azure-pipelines.yml  build.sh  iterable.yml  test.cmake
test/: main.cpp  union_find_ut.cpp
